--- a/batch_scripts/windows/installation/environment_windows_py37tca.yml
+++ b/batch_scripts/windows/installation/environment_windows_py37tca.yml
@@ -3,236 +3,240 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - abseil-cpp=20200225.2=ha925a31_2
-  - arctic=1.79.3=py_0
-  - argon2-cffi=20.1.0=py37h4ab8f01_1
-  - arrow-cpp=1.0.1=py37h1234567_2_cpu
+  - abseil-cpp=20200923.3=h0e60522_0
+  - anyio=2.0.2=py37h03978a9_4
+  - argon2-cffi=20.1.0=py37hcc03f2d_2
+  - arrow-cpp=2.0.0=py37h68b104a_18_cpu
   - async_generator=1.10=py_0
   - atomicwrites=1.4.0=pyh9f0ad1d_0
-  - attrs=20.2.0=pyh9f0ad1d_0
-  - aws-sdk-cpp=1.7.164=vc14h84f8083_2
+  - attrs=20.3.0=pyhd3deb0d_0
+  - aws-c-cal=0.4.5=hd67dfff_4
+  - aws-c-common=0.4.65=h8ffe710_0
+  - aws-c-event-stream=0.2.6=hc969853_1
+  - aws-c-io=0.8.0=h9f364c9_0
+  - aws-checksums=0.1.10=h9f364c9_2
+  - aws-sdk-cpp=1.8.127=h0223788_0
+  - babel=2.9.0=pyhd3deb0d_0
   - backcall=0.2.0=pyh9f0ad1d_0
   - backports=1.0=py_2
   - backports.functools_lru_cache=1.6.1=py_0
-  - beautifulsoup4=4.9.1=py_1
-  - blas=1.0=mkl
-  - bleach=3.1.5=pyh9f0ad1d_0
-  - blosc=1.20.1=ha925a31_0
-  - bokeh=2.2.1=py37hc8dfbb8_0
-  - bqplot=0.12.16=pyh9f0ad1d_0
-  - brotlipy=0.7.0=py37h4ab8f01_1000
-  - bzip2=1.0.8=he774522_3
-  - c-ares=1.16.1=he774522_3
-  - ca-certificates=2020.6.20=hecda079_0
-  - certifi=2020.6.20=py37hc8dfbb8_0
-  - cffi=1.14.1=py37h26f1ce3_0
-  - chardet=3.0.4=py37hc8dfbb8_1006
+  - beautifulsoup4=4.9.3=pyhb0f4dca_0
+  - bleach=3.2.2=pyh44b312d_0
+  - blosc=1.21.0=h0e60522_0
+  - bokeh=2.2.3=py37h03978a9_0
+  - bqplot=0.12.21=pyhd8ed1ab_0
+  - brotlipy=0.7.0=py37hcc03f2d_1001
+  - bzip2=1.0.8=h8ffe710_4
+  - c-ares=1.17.1=h8ffe710_0
+  - ca-certificates=2020.12.5=h5b45459_0
+  - certifi=2020.12.5=py37h03978a9_1
+  - cffi=1.14.4=py37hd8e9650_1
   - click=7.1.2=pyh9f0ad1d_0
   - cloudpickle=1.6.0=py_0
-  - colorama=0.4.3=py_0
-  - comtypes=1.1.7=py37hc8dfbb8_1001
-  - coverage=5.3=py37h4ab8f01_0
-  - coveralls=2.1.2=py_0
-  - cryptography=3.1=py37h26f1ce3_0
-  - curl=7.71.1=h4b64cdc_5
+  - colorama=0.4.4=pyh9f0ad1d_0
+  - comtypes=1.1.8=py37h03978a9_0
+  - coverage=5.3.1=py37hcc03f2d_1
+  - cryptography=3.3.1=py37hd8e9650_1
   - cycler=0.10.0=py_2
-  - cython=0.29.21=py37h1834ac0_0
-  - cytoolz=0.10.1=py37hfa6e2cd_0
-  - dask=2.26.0=py_0
-  - dask-core=2.26.0=py_0
+  - cython=0.29.21=py37hf2a7229_2
+  - cytoolz=0.11.0=py37hcc03f2d_1
+  - dask=2021.1.0=pyhd8ed1ab_0
+  - dask-core=2021.1.0=pyhd8ed1ab_0
   - decorator=4.4.2=py_0
   - defusedxml=0.6.0=py_0
-  - dill=0.3.2=pyh9f0ad1d_0
-  - distributed=2.26.0=py37hc8dfbb8_0
-  - docopt=0.6.2=py_1
-  - entrypoints=0.3=py37hc8dfbb8_1001
-  - enum-compat=0.0.3=py37hc8dfbb8_1
-  - fastparquet=0.4.1=py37h44b1f71_0
-  - freetype=2.10.2=hd328e21_0
+  - dill=0.3.3=pyhd8ed1ab_0
+  - distributed=2021.1.0=py37h03978a9_1
+  - entrypoints=0.3=pyhd8ed1ab_1003
+  - fastparquet=0.5.0=py37hda49f71_0
+  - freetype=2.10.4=h546665d_1
   - freetype-py=2.2.0=pyh9f0ad1d_0
   - gflags=2.2.2=ha925a31_1004
   - glog=0.4.0=h0174b99_3
-  - grpc-cpp=1.30.1=h45b88af_1
+  - grpc-cpp=1.35.0=h9c91839_0
   - heapdict=1.0.1=py_0
-  - icc_rt=2019.0.0=h0cc432a_1
   - icu=67.1=h33f27b4_0
-  - idna=2.10=pyh9f0ad1d_0
-  - importlib-metadata=1.7.0=py37hc8dfbb8_0
-  - importlib_metadata=1.7.0=0
-  - iniconfig=1.0.1=pyh9f0ad1d_0
-  - intel-openmp=2019.4=245
-  - ipykernel=5.3.4=py37h5ca1d4c_0
-  - ipython=7.18.1=py37hc6149b9_0
+  - importlib-metadata=3.4.0=py37h03978a9_0
+  - importlib_metadata=3.4.0=hd8ed1ab_0
+  - iniconfig=1.1.1=pyh9f0ad1d_0
+  - intel-openmp=2020.3=h57928b3_311
+  - ipykernel=5.4.2=py37h7b7c402_0
+  - ipython=7.18.1=py37hc6149b9_1
   - ipython_genutils=0.2.0=py_1
-  - ipywidgets=7.5.1=pyh9f0ad1d_1
-  - jedi=0.17.2=py37hc8dfbb8_0
+  - ipywidgets=7.6.3=pyhd3deb0d_0
+  - jedi=0.18.0=py37h03978a9_2
   - jinja2=2.11.2=pyh9f0ad1d_0
-  - jpeg=9d=he774522_0
-  - json5=0.9.4=pyh9f0ad1d_0
-  - jsonschema=3.2.0=py37hc8dfbb8_1
-  - jupyter_client=6.1.7=py_0
+  - jpeg=9d=h8ffe710_0
+  - json5=0.9.5=pyh9f0ad1d_0
+  - jsonschema=3.2.0=py_2
+  - jupyter_client=6.1.11=pyhd8ed1ab_1
   - jupyter_contrib_core=0.3.3=py_2
-  - jupyter_contrib_nbextensions=0.5.1=py37_0
-  - jupyter_core=4.6.3=py37hc8dfbb8_1
-  - jupyter_highlight_selected_word=0.2.0=py37_1000
-  - jupyter_latex_envs=1.4.4=py37_1000
-  - jupyter_nbextensions_configurator=0.4.1=py37hc8dfbb8_1
-  - jupyterlab=2.2.8=py_0
-  - jupyterlab_pygments=0.1.1=pyh9f0ad1d_0
-  - jupyterlab_server=1.2.0=py_0
-  - kiwisolver=1.2.0=py37heaa310e_0
-  - krb5=1.17.1=hc04afaa_3
-  - libblas=3.8.0=14_mkl
-  - libcblas=3.8.0=14_mkl
+  - jupyter_contrib_nbextensions=0.5.1=py37hc8dfbb8_1
+  - jupyter_core=4.7.0=py37h03978a9_1
+  - jupyter_highlight_selected_word=0.2.0=py37hc8dfbb8_1002
+  - jupyter_latex_envs=1.4.6=py37hc8dfbb8_1001
+  - jupyter_nbextensions_configurator=0.4.1=py37hc8dfbb8_2
+  - jupyter_server=1.2.2=py37h03978a9_1
+  - jupyterlab=3.0.5=pyhd8ed1ab_0
+  - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
+  - jupyterlab_server=2.1.2=pyhd8ed1ab_0
+  - jupyterlab_widgets=1.0.0=pyhd8ed1ab_1
+  - kiwisolver=1.3.1=py37h8c56517_1
+  - krb5=1.17.2=hbae68bd_0
+  - libblas=3.9.0=7_mkl
+  - libcblas=3.9.0=7_mkl
   - libclang=10.0.1=default_hf44288c_1
-  - libcurl=7.71.1=h4b64cdc_5
+  - libcurl=7.71.1=h4b64cdc_8
   - libiconv=1.16=he774522_0
-  - liblapack=3.8.0=14_mkl
-  - libpng=1.6.37=ha81a0f5_2
-  - libprotobuf=3.12.4=h200bbdf_0
-  - libsodium=1.0.17=h2fa13f4_0
+  - liblapack=3.9.0=7_mkl
+  - libpng=1.6.37=h1d00b33_2
+  - libprotobuf=3.14.0=h7755175_0
+  - libsodium=1.0.18=h8d14728_1
   - libssh2=1.9.0=hb06d900_5
-  - libtiff=4.1.0=h885aae3_6
-  - libutf8proc=2.5.0=h9e6e254_2
-  - libxml2=2.9.10=h1006b36_2
-  - libxslt=1.1.33=h579f668_1
-  - llvmlite=0.34.0=py37h8b575af_1
+  - libthrift=0.13.0=hdfef310_6
+  - libtiff=4.2.0=hc10be44_0
+  - libutf8proc=2.6.1=hcb41399_0
+  - libxml2=2.9.10=hf5bbc77_3
+  - libxslt=1.1.33=h65864e5_2
+  - llvmlite=0.35.0=py37habb0c8c_1
   - locket=0.2.0=py_2
-  - lxml=4.5.2=py37h8ba8a40_0
-  - lz4=3.1.0=py37h2519948_0
-  - lz4-c=1.9.2=h62dcd97_2
+  - lxml=4.6.2=py37hd07aab1_1
+  - lz4-c=1.9.3=h8ffe710_0
   - m2w64-gcc-libgfortran=5.3.0=6
   - m2w64-gcc-libs=5.3.0=7
   - m2w64-gcc-libs-core=5.3.0=7
   - m2w64-gmp=6.1.0=2
   - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-  - markupsafe=1.1.1=py37h8055547_1
-  - matplotlib=3.3.1=1
-  - matplotlib-base=3.3.1=py37h35e8a6e_1
-  - mistune=0.8.4=py37h8055547_1001
-  - mkl=2019.4=245
-  - mkl-service=2.3.0=py37hfa6e2cd_0
-  - mockextras=1.0.2=py37hc8dfbb8_1
-  - more-itertools=8.5.0=py_0
-  - msgpack-python=1.0.0=py37heaa310e_1
+  - markupsafe=1.1.1=py37hcc03f2d_3
+  - matplotlib=3.3.3=py37h03978a9_0
+  - matplotlib-base=3.3.3=py37h3379fd5_0
+  - mistune=0.8.4=py37hcc03f2d_1003
+  - mkl=2020.4=hb70f87d_311
+  - more-itertools=8.6.0=pyhd8ed1ab_0
+  - msgpack-python=1.0.2=py37h8c56517_1
   - msys2-conda-epoch=20160418=1
-  - multiprocess=0.70.10=py37h4ab8f01_0
-  - nbclient=0.5.0=py_0
-  - nbconvert=6.0.2=py37hc8dfbb8_0
-  - nbformat=5.0.7=py_0
-  - nodejs=14.10.1=0
-  - notebook=6.1.4=py37hc8dfbb8_0
-  - numba=0.51.2=py37h414f9d2_0
-  - numpy=1.19.1=py37h7cee19a_2
-  - olefile=0.46=py_0
-  - openssl=1.1.1g=he774522_1
-  - packaging=20.4=pyh9f0ad1d_0
-  - pandas=0.25.3=py37he350917_0
-  - pandoc=2.10.1=he774522_0
+  - multiprocess=0.70.11.1=py37hcc03f2d_1
+  - nbclassic=0.2.6=pyhd8ed1ab_0
+  - nbclient=0.5.1=py_0
+  - nbconvert=6.0.7=py37h03978a9_3
+  - nbformat=5.1.2=pyhd8ed1ab_1
+  - nodejs=15.3.0=h57928b3_0
+  - notebook=6.2.0=py37h03978a9_0
+  - numba=0.52.0=py37h08fd248_0
+  - numpy=1.19.5=py37hd20adf4_1
+  - olefile=0.46=pyh9f0ad1d_1
+  - openssl=1.1.1i=h8ffe710_0
+  - packaging=20.8=pyhd3deb0d_0
+  - pandoc=2.11.3.2=h8ffe710_0
   - pandocfilters=1.4.2=py_1
   - parquet-cpp=1.5.1=2
-  - parso=0.7.1=pyh9f0ad1d_0
+  - parso=0.8.1=pyhd8ed1ab_0
   - partd=1.1.0=py_0
-  - pathos=0.2.6=pyh9f0ad1d_0
+  - pathos=0.2.7=pyhd3deb0d_0
   - patsy=0.5.1=py_0
-  - pickleshare=0.7.5=py37hc8dfbb8_1001
-  - pillow=7.2.0=py37hc826c6e_1
-  - pip=20.2.2=py37_0
-  - pluggy=0.13.1=py37hc8dfbb8_2
-  - pox=0.2.8=pyh9f0ad1d_0
-  - prometheus_client=0.8.0=pyh9f0ad1d_0
-  - prompt-toolkit=3.0.7=py_0
-  - psutil=5.7.2=py37h4ab8f01_0
-  - py=1.9.0=pyh9f0ad1d_0
-  - pyarrow=1.0.1=py37h1234567_2_cpu
+  - pickleshare=0.7.5=py_1003
+  - pillow=8.1.0=py37hdec93a9_1
+  - pip=20.3.3=py37haa95532_0
+  - pluggy=0.13.1=py37h03978a9_4
+  - pox=0.2.9=pyhd3deb0d_0
+  - ppft=1.6.6.3=pyhd3deb0d_0
+  - prometheus_client=0.9.0=pyhd3deb0d_0
+  - prompt-toolkit=3.0.11=pyha770c72_0
+  - psutil=5.8.0=py37hcc03f2d_1
+  - py=1.10.0=pyhd3deb0d_0
+  - pyarrow=2.0.0=py37h633fffd_18_cpu
   - pycparser=2.20=pyh9f0ad1d_2
-  - pygments=2.7.0=py_0
-  - pymongo=3.11.0=py37h1834ac0_3
-  - pyodbc=4.0.30=py37h6538335_0
-  - pyopenssl=19.1.0=py_1
+  - pygments=2.7.4=pyhd8ed1ab_0
+  - pyodbc=4.0.30=py37hf2a7229_1
+  - pyopenssl=20.0.1=pyhd8ed1ab_0
   - pyparsing=2.4.7=pyh9f0ad1d_0
-  - pyqt=5.12.3=py37h6538335_1
-  - pyrsistent=0.17.3=py37h4ab8f01_0
-  - pysocks=1.7.1=py37hc8dfbb8_1
-  - pytest=6.0.2=py37hc8dfbb8_0
-  - pytest-cov=2.10.1=pyh9f0ad1d_0
+  - pyqt=5.12.3=py37h03978a9_7
+  - pyqt-impl=5.12.3=py37hf2a7229_7
+  - pyqt5-sip=4.19.18=py37hf2a7229_7
+  - pyqtchart=5.12=py37hf2a7229_7
+  - pyqtwebengine=5.12.1=py37hf2a7229_7
+  - pyrsistent=0.17.3=py37hcc03f2d_2
+  - pysocks=1.7.1=py37h03978a9_3
+  - pytest=6.2.1=py37h03978a9_1
+  - pytest-cov=2.11.1=pyh44b312d_0
   - python=3.7.9=h60c2a47_0
-  - python-blosc=1.9.2=py37h89887c2_0
+  - python-blosc=1.10.2=py37h80912f5_0
   - python-dateutil=2.8.1=py_0
-  - python-snappy=0.5.4=py37h9a6de72_1
+  - python-snappy=0.5.4=py37hff7499e_3
   - python_abi=3.7=1_cp37m
-  - pytz=2020.1=pyh9f0ad1d_0
-  - pywin32=227=py37hfa6e2cd_0
-  - pywinpty=0.5.7=py37_0
-  - pyyaml=5.3.1=py37h8055547_0
-  - pyzmq=19.0.2=py37h453f00a_0
-  - qt=5.12.6=hb2cf2c5_0
-  - re2=2020.08.01=ha925a31_1
+  - pytz=2020.5=pyhd8ed1ab_0
+  - pywin32=300=py37hcc03f2d_0
+  - pywinpty=0.5.7=py37hc8dfbb8_1
+  - pyyaml=5.4.1=py37hcc03f2d_0
+  - pyzmq=21.0.1=py37h0d95fc2_0
+  - qt=5.12.9=hb2cf2c5_0
+  - re2=2020.11.01=h0e60522_0
   - redis-py=3.5.3=pyh9f0ad1d_0
-  - requests=2.24.0=pyh9f0ad1d_0
-  - rise=5.6.1=py37hc8dfbb8_1
-  - scipy=1.5.2=py37h9439919_0
+  - rise=5.7.1=py37h03978a9_0
+  - scipy=1.6.0=py37h6db1a17_0
   - send2trash=1.5.0=py_0
-  - setuptools=49.6.0=py37_0
+  - setuptools=51.3.3=py37haa95532_4
   - setuptools-git=1.2=py_1
   - six=1.15.0=pyh9f0ad1d_0
   - snappy=1.1.8=ha925a31_3
-  - sortedcontainers=2.2.2=pyh9f0ad1d_0
+  - sniffio=1.2.0=py37h03978a9_1
+  - sortedcontainers=2.3.0=pyhd8ed1ab_0
   - soupsieve=2.0.1=py_1
-  - sqlalchemy=1.3.19=py37h4ab8f01_0
+  - sqlalchemy=1.3.22=py37hcc03f2d_1
   - sqlite=3.33.0=h2a8f88b_0
-  - statsmodels=0.12.0=py37h4ab8f01_0
+  - statsmodels=0.12.1=py37hda49f71_2
   - tblib=1.6.0=py_0
-  - terminado=0.8.3=py37hc8dfbb8_1
+  - terminado=0.9.2=py37h03978a9_0
   - testpath=0.4.4=py_0
   - thrift=0.11.0=py37h6538335_1001
-  - thrift-cpp=0.13.0=hdfef310_4
-  - tk=8.6.10=he774522_0
-  - toml=0.10.1=pyh9f0ad1d_0
-  - toolz=0.10.0=py_0
-  - tornado=6.0.4=py37hfa6e2cd_0
-  - traitlets=4.3.3=py37hc8dfbb8_1
-  - traittypes=0.2.1=py_1
-  - typing_extensions=3.7.4.2=py_0
-  - tzlocal=2.1=pyh9f0ad1d_0
-  - urllib3=1.25.10=py_0
-  - vc=14.1=h0510ff6_4
-  - vispy=0.6.4=py37hbc2f12b_1
-  - vs2015_runtime=14.16.27012=hf0eaf9b_3
-  - wcwidth=0.2.5=pyh9f0ad1d_1
+  - tk=8.6.10=h8ffe710_1
+  - toml=0.10.2=pyhd8ed1ab_0
+  - toolz=0.11.1=py_0
+  - tornado=6.1=py37hcc03f2d_1
+  - traitlets=5.0.5=py_0
+  - traittypes=0.2.1=pyh9f0ad1d_2
+  - typing_extensions=3.7.4.3=py_0
+  - vc=14.2=h21ff451_1
+  - vispy=0.6.6=py37hda49f71_0
+  - vs2015_runtime=14.27.29016=h5e58377_2
+  - wcwidth=0.2.5=pyh9f0ad1d_2
   - webencodings=0.5.1=py_1
-  - wheel=0.35.1=py_0
-  - widgetsnbextension=3.5.1=py37hc8dfbb8_1
-  - win_inet_pton=1.1.0=py37_0
+  - wheel=0.36.2=pyhd3eb1b0_0
+  - widgetsnbextension=3.5.1=py37h03978a9_4
+  - win_inet_pton=1.1.0=py37h03978a9_2
   - wincertstore=0.2=py37_0
   - winpty=0.4.3=4
   - xlwings=0.20.2=py37hc8dfbb8_0
   - xz=5.2.5=h62dcd97_1
   - yaml=0.2.5=he774522_0
-  - zeromq=4.3.2=ha925a31_3
+  - zeromq=4.3.3=h0e60522_3
   - zict=2.0.0=py_0
-  - zipp=3.1.0=py_0
+  - zipp=3.4.0=py_0
   - zlib=1.2.11=h62dcd97_4
-  - zstd=1.4.5=h1f3a1b7_2
+  - zstd=1.4.8=h4e2f164_1
   - pip:
-    - aiohttp==3.6.2
-    - alpha-vantage==2.2.0
-    - amqp==2.5.2
-    - ansi2html==1.5.2
+    - aiohttp==3.7.3
+    - alpha-vantage==2.3.1
+    - amqp==5.0.3
+    - ansi2html==1.6.0
     - appdirs==1.4.3
+    - arctic==1.79.4
     - async-timeout==3.0.1
     - billiard==3.6.3.0
     - boto3==1.5.11
     - botocore==1.8.50
     - brotli==1.0.9
-    - cairocffi==1.1.0
-    - cairosvg==2.4.2
-    - celery==4.4.0
+    - cairocffi==1.2.0
+    - cairosvg==2.5.1
+    - celery==5.0.5
+    - chardet==3.0.4
     - chart-studio==1.1.0
     - chartpy==0.1.8
+    - click-didyoumean==0.0.3
+    - click-plugins==1.1.1
+    - click-repl==0.1.6
     - colorlover==0.3.0
-    - configparser==5.0.0
-    - cssselect2==0.3.0
+    - configparser==5.0.1
+    - cssselect2==0.4.1
     - cufflinks==0.17.3
     - dash==1.12.0
     - dash-auth==1.3.2
@@ -248,12 +252,14 @@ dependencies:
     - docutils==0.16
     - dtale==1.8.1
     - eikon==1.1.2
+    - enum-compat==0.0.3
     - et-xmlfile==1.0.1
-    - findatapy==0.1.16
+    - financepy==0.191
+    - findatapy==0.1.19
     - flask==1.1.2
-    - flask-compress==1.5.0
+    - flask-compress==1.8.0
     - flask-ngrok==0.0.25
-    - flask-seasurf==0.2.2
+    - flask-seasurf==0.3.0
     - flask-session==0.3.1
     - fsspec==0.3.3
     - future==0.18.2
@@ -264,6 +270,7 @@ dependencies:
     - html5lib==1.1
     - http3==0.6.7
     - hyperframe==5.2.0
+    - idna==2.8
     - inflection==0.5.1
     - influxdb==5.2.3
     - itsdangerous==1.1.0
@@ -271,28 +278,30 @@ dependencies:
     - jmespath==0.10.0
     - jupyter-dash==0.2.1
     - kaleido==0.0.2
-    - keyring==21.4.0
-    - kombu==4.6.7
-    - multidict==4.7.6
+    - keyring==21.8.0
+    - kombu==5.0.2
+    - lz4==3.1.3
+    - mockextras==1.0.2
+    - multidict==5.1.0
     - multitasking==0.0.9
     - mysql-connector-python==8.0.19
     - nest-asyncio==1.0.0
     - oauthlib==3.1.0
-    - openpyxl==3.0.5
+    - openpyxl==3.0.6
+    - pandas==1.2.1
     - pandas-datareader==0.9.0
     - pdfkit==0.6.1
     - plotly==4.9.0
-    - ppft==1.6.6.2
     - protobuf==3.6.1
-    - pyphen==0.9.5
-    - pyqt5-sip==4.19.18
-    - pyqtwebengine==5.12.1
-    - pystore==0.1.15
-    - pytest-tap==3.1
+    - pymongo==3.11.2
+    - pyphen==0.10.0
+    - pystore==0.1.22
+    - pytest-tap==3.2
     - python-memcached==1.59
     - pywin32-ctypes==0.2.0
     - qpython==2.0.0
-    - quandl==3.5.2
+    - quandl==3.6.0
+    - requests==2.22.0
     - requests-async==0.6.2
     - requests-oauthlib==1.3.0
     - retrying==1.3.3
@@ -300,14 +309,15 @@ dependencies:
     - s3transfer==0.1.13
     - socketio-client==0.7.2
     - tap-py==3.0
-    - tinycss2==1.0.2
+    - tinycss2==1.1.0
     - twython==3.8.2
+    - tzlocal==2.1
     - ua-parser==0.10.0
-    - vine==1.3.0
+    - urllib3==1.25.11
+    - vine==5.0.0
     - weasyprint==51
     - websocket-client==0.57.0
     - werkzeug==1.0.1
-    - yarl==1.5.1
-    - yfinance==0.1.54
-    - zope-interface==5.1.0
-
+    - yarl==1.6.3
+    - yfinance==0.1.55
+    - zope-interface==5.2.0
