--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,31 @@
 setuptools-git==1.2
-cython==0.29.13
-arctic==1.79.2
+cython
+arctic==1.79.4
 sqlalchemy==1.3.17
 redis==3.3.7
-pandas==0.25.3
-numpy==1.19.1
-scipy==1.4.1
+pandas==1.0.5
+numpy
+scipy
 statsmodels==0.11.1
 blosc==1.8.3
-pyarrow==1.0.1
-pathos==0.2.1
-multiprocess==0.70.9
-fastparquet==0.3.3
+pyarrow==2.0.0
+pathos
+multiprocess
+fastparquet==0.4.1
 flask-restplus==0.13.0
 gunicorn==19.9.0
 beautifulsoup4==4.8.0
 pdfkit==0.6.1
 psutil==5.6.6
-matplotlib==3.1.1
+matplotlib==3.3.1
 boto3==1.5.11
 pyodbc==4.0.23
-pytest==5.4.3
-pytest-cov==2.5.1
+pytest
+pytest-cov
 mysql-connector-python==8.0.19
 IPython==7.14.0
 chartpy==0.1.8
-findatapy==0.1.16
+findatapy==0.1.19
 dash-auth==1.3.2
 cufflinks==0.17.3
 plotly==4.9.0
@@ -41,11 +41,11 @@ jupyter-dash==0.2.1
 dtale==1.8.1
 qpython==2.0.0
 influxdb==5.2.3
-celery==4.4.0
+celery==5.0.5
 pytest-tap
-kombu==4.6.7
+kombu
 python-memcached==1.59
-numba==0.48.0
+numba
 vispy==0.6.4
 jinja2==2.11.2
 jupyterlab
@@ -60,5 +60,5 @@ cloudpickle==1.3.0
 python-snappy==0.5.4
 bokeh==2.0.1
 msgpack==1.0.0
-pystore==0.1.15
+pystore
 fsspec==0.3.3
