--- a/batch_scripts/windows/installation/environment_windows_py37tca.yml
+++ b/batch_scripts/windows/installation/environment_windows_py37tca.yml
@@ -6,22 +6,22 @@ dependencies:
   - abseil-cpp=20200923.3=h0e60522_0
   - anyio=2.0.2=py37h03978a9_4
   - argon2-cffi=20.1.0=py37hcc03f2d_2
-  - arrow-cpp=3.0.0=py37h7c675fb_1_cpu
+  - arrow-cpp=3.0.0=py37h6570928_2_cpu
   - async_generator=1.10=py_0
   - atomicwrites=1.4.0=pyh9f0ad1d_0
   - attrs=20.3.0=pyhd3deb0d_0
-  - aws-c-cal=0.4.5=hd67dfff_4
-  - aws-c-common=0.4.65=h8ffe710_0
-  - aws-c-event-stream=0.2.6=hc969853_1
-  - aws-c-io=0.8.0=h9f364c9_0
-  - aws-checksums=0.1.10=h9f364c9_2
-  - aws-sdk-cpp=1.8.130=h54f1628_1
+  - aws-c-cal=0.4.5=hab2e77c_5
+  - aws-c-common=0.4.66=h8ffe710_0
+  - aws-c-event-stream=0.2.6=hd55c23a_2
+  - aws-c-io=0.8.2=he275310_1
+  - aws-checksums=0.1.10=he275310_3
+  - aws-sdk-cpp=1.8.134=hd58d940_1
   - babel=2.9.0=pyhd3deb0d_0
   - backcall=0.2.0=pyh9f0ad1d_0
   - backports=1.0=py_2
   - backports.functools_lru_cache=1.6.1=py_0
   - beautifulsoup4=4.9.3=pyhb0f4dca_0
-  - bleach=3.2.3=pyh44b312d_0
+  - bleach=3.3.0=pyh44b312d_0
   - blosc=1.21.0=h0e60522_0
   - bokeh=2.2.3=py37h03978a9_0
   - bqplot=0.12.21=pyhd8ed1ab_0
@@ -59,10 +59,10 @@ dependencies:
   - iniconfig=1.1.1=pyh9f0ad1d_0
   - intel-openmp=2020.3=h57928b3_311
   - ipykernel=5.4.2=py37h7b7c402_0
-  - ipython=7.19.0=py37heaed05f_2
+  - ipython=7.20.0=py37heaed05f_2
   - ipython_genutils=0.2.0=py_1
   - ipywidgets=7.6.3=pyhd3deb0d_0
-  - jedi=0.17.2=py37h03978a9_1
+  - jedi=0.18.0=py37h03978a9_2
   - jinja2=2.11.3=pyh44b312d_0
   - jpeg=9d=h8ffe710_0
   - json5=0.9.5=pyh9f0ad1d_0
@@ -74,19 +74,19 @@ dependencies:
   - jupyter_highlight_selected_word=0.2.0=py37h03978a9_1002
   - jupyter_latex_envs=1.4.6=py37hc8dfbb8_1001
   - jupyter_nbextensions_configurator=0.4.1=py37h03978a9_2
-  - jupyter_server=1.2.3=py37h03978a9_1
-  - jupyterlab=3.0.6=pyhd8ed1ab_0
+  - jupyter_server=1.3.0=py37h03978a9_0
+  - jupyterlab=3.0.7=pyhd8ed1ab_0
   - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
-  - jupyterlab_server=2.1.3=pyhd8ed1ab_0
+  - jupyterlab_server=2.2.0=pyhd8ed1ab_0
   - jupyterlab_widgets=1.0.0=pyhd8ed1ab_1
   - kiwisolver=1.3.1=py37h8c56517_1
   - krb5=1.17.2=hbae68bd_0
-  - libblas=3.9.0=7_mkl
-  - libcblas=3.9.0=7_mkl
+  - libblas=3.9.0=8_mkl
+  - libcblas=3.9.0=8_mkl
   - libclang=10.0.1=default_hf44288c_1
   - libcurl=7.71.1=h4b64cdc_8
   - libiconv=1.16=he774522_0
-  - liblapack=3.9.0=7_mkl
+  - liblapack=3.9.0=8_mkl
   - libpng=1.6.37=h1d00b33_2
   - libprotobuf=3.14.0=h7755175_0
   - libsodium=1.0.18=h8d14728_1
@@ -124,12 +124,12 @@ dependencies:
   - numpy=1.20.0=py37hd20adf4_0
   - olefile=0.46=pyh9f0ad1d_1
   - openssl=1.1.1i=h8ffe710_0
-  - packaging=20.8=pyhd3deb0d_0
+  - packaging=20.9=pyh44b312d_0
   - pandas=1.0.5=py37h3bbf574_0
   - pandoc=2.11.4=h8ffe710_0
   - pandocfilters=1.4.2=py_1
   - parquet-cpp=1.5.1=2
-  - parso=0.7.1=pyh9f0ad1d_0
+  - parso=0.8.1=pyhd8ed1ab_0
   - partd=1.1.0=py_0
   - pathos=0.2.7=pyhd3deb0d_0
   - patsy=0.5.1=py_0
@@ -143,7 +143,7 @@ dependencies:
   - prompt-toolkit=3.0.14=pyha770c72_0
   - psutil=5.8.0=py37hcc03f2d_1
   - py=1.10.0=pyhd3deb0d_0
-  - pyarrow=3.0.0=py37h633fffd_1_cpu
+  - pyarrow=3.0.0=py37h633fffd_2_cpu
   - pycparser=2.20=pyh9f0ad1d_2
   - pygments=2.7.4=pyhd8ed1ab_0
   - pyodbc=4.0.30=py37hf2a7229_1
@@ -181,9 +181,9 @@ dependencies:
   - sniffio=1.2.0=py37h03978a9_1
   - sortedcontainers=2.3.0=pyhd8ed1ab_0
   - soupsieve=2.0.1=py_1
-  - sqlalchemy=1.3.22=py37hcc03f2d_1
+  - sqlalchemy=1.3.23=py37hcc03f2d_0
   - sqlite=3.33.0=h2a8f88b_0
-  - statsmodels=0.12.1=py37hda49f71_2
+  - statsmodels=0.12.2=py37hda49f71_0
   - tblib=1.6.0=py_0
   - terminado=0.9.2=py37h03978a9_0
   - testpath=0.4.4=py_0
@@ -205,7 +205,7 @@ dependencies:
   - win_inet_pton=1.1.0=py37h03978a9_2
   - wincertstore=0.2=py37_0
   - winpty=0.4.3=4
-  - xlwings=0.20.2=py37hc8dfbb8_0
+  - xlwings=0.22.0=py37haa95532_0
   - xz=5.2.5=h62dcd97_1
   - yaml=0.2.5=he774522_0
   - zeromq=4.3.3=h0e60522_3
@@ -255,7 +255,7 @@ dependencies:
     - enum-compat==0.0.3
     - et-xmlfile==1.0.1
     - fastparquet==0.4.1
-    - financepy==0.191
+    - financepy==0.192
     - findatapy==0.1.19
     - flask==1.1.2
     - flask-compress==1.8.0
@@ -293,7 +293,7 @@ dependencies:
     - pdfkit==0.6.1
     - plotly==4.9.0
     - protobuf==3.6.1
-    - pymongo==3.11.2
+    - pymongo==3.11.3
     - pyphen==0.10.0
     - pystore==0.1.22
     - pytest-tap==3.2
@@ -321,3 +321,4 @@ dependencies:
     - yarl==1.6.3
     - yfinance==0.1.55
     - zope-interface==5.2.0
+prefix: C:\Anaconda3\envs\py37tca
