--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,29 @@
 setuptools-git==1.2
 cython
 arctic==1.79.4
-sqlalchemy==1.3.17
-redis==3.3.7
+sqlalchemy
+redis
 pandas==1.0.5
 numpy
 scipy
-statsmodels==0.11.1
+statsmodels
 blosc==1.8.3
 pyarrow==2.0.0
 pathos
 multiprocess
 fastparquet==0.4.1
 flask-restplus==0.13.0
-gunicorn==19.9.0
-beautifulsoup4==4.8.0
+gunicorn
+beautifulsoup4
 pdfkit==0.6.1
-psutil==5.6.6
-matplotlib==3.3.1
-boto3==1.5.11
+psutil
+matplotlib
+boto3
 pyodbc==4.0.23
 pytest
 pytest-cov
 mysql-connector-python==8.0.19
-IPython==7.14.0
+IPython
 chartpy==0.1.8
 findatapy==0.1.19
 dash-auth==1.3.2
@@ -46,19 +46,19 @@ pytest-tap
 kombu
 python-memcached==1.59
 numba
-vispy==0.6.4
-jinja2==2.11.2
+vispy
+jinja2
 jupyterlab
 jupyter_contrib_nbextensions
 jupyter_nbextensions_configurator
 RISE
 bqplot
 WeasyPrint==51
-dask==2.14.0
-distributed==2.14.0
+dask
+distributed
 cloudpickle==1.3.0
 python-snappy==0.5.4
-bokeh==2.0.1
+bokeh
 msgpack==1.0.0
 pystore
 fsspec==0.3.3
