--- a/requirements.txt
+++ b/requirements.txt
@@ -32,13 +32,13 @@ plotly==4.9.0
 kaleido
 eikon==1.1.2
 chart-studio==1.1.0
-dash==1.12.0
-dash-bootstrap-components==0.10.3
-dash-html-components==1.0.3
-dash-core-components==1.10.0
-dash-table==4.7.0
-jupyter-dash==0.2.1
-dtale==1.8.1
+dash==1.20.0
+dash-bootstrap-components==0.12.0
+dash-html-components==1.1.3
+dash-core-components==1.16.0
+dash-table==4.11.3
+jupyter-dash==0.4.0
+dtale
 qpython==2.0.0
 influxdb==5.2.3
 celery==5.0.5
