--- a/batch_scripts/linux/installation/environment_linux_py37tca.yml
+++ b/batch_scripts/linux/installation/environment_linux_py37tca.yml
@@ -245,7 +245,7 @@ dependencies:
     - celery==5.0.5
     - chardet==3.0.4
     - chart-studio==1.1.0
-    - chartpy==0.1.8
+    - chartpy==0.1.11
     - click-didyoumean==0.0.3
     - click-plugins==1.1.1
     - click-repl==0.1.6
@@ -300,9 +300,11 @@ dependencies:
     - nest-asyncio==1.0.0
     - oauthlib==3.1.0
     - openpyxl==3.0.6
+    - pandas==1.0.5
     - pandas-datareader==0.9.0
     - plotly==4.9.0
     - protobuf==3.6.1
+    - pyarrow==6.0.1
     - pymongo==3.11.3
     - pyphen==0.10.0
     - pystore==0.1.22
